[gd_scene load_steps=18 format=3 uid="uid://ko2tbdkb1eiu"]

[ext_resource type="Script" path="res://worlds/instruction_screen.gd" id="1_hyd6e"]
[ext_resource type="FontFile" uid="uid://dy03qa2n13w83" path="res://fonts/GrapeSoda.ttf" id="2_ftmw7"]
[ext_resource type="Texture2D" uid="uid://cds8q1otyhfc6" path="res://assets/sprites/left_click.png" id="3_lcx0e"]
[ext_resource type="Texture2D" uid="uid://cxqow1rfa87ij" path="res://assets/sprites/wasd.png" id="4_af0v8"]

[sub_resource type="LabelSettings" id="LabelSettings_htdsn"]
font = ExtResource("2_ftmw7")

[sub_resource type="LabelSettings" id="LabelSettings_42dcr"]
font = ExtResource("2_ftmw7")

[sub_resource type="LabelSettings" id="LabelSettings_nf2c2"]
font = ExtResource("2_ftmw7")
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8jygy"]
font = ExtResource("2_ftmw7")

[sub_resource type="Animation" id="Animation_h1geo"]
resource_name = "fade_to_normal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeFirst:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_jtwbn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeFirst:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FadeSecond:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FadeThird:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2x018"]
resource_name = "fade_to_black"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeFirst:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hpq8f"]
resource_name = "fade_to_normal2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeSecond:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_slr78"]
resource_name = "fade_to_black2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeSecond:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_unb1w"]
resource_name = "fade_to_normal3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeThird:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_11ppj"]
resource_name = "fade_to_black3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeThird:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k5bt6"]
_data = {
"RESET": SubResource("Animation_jtwbn"),
"fade_to_black": SubResource("Animation_2x018"),
"fade_to_black2": SubResource("Animation_slr78"),
"fade_to_black3": SubResource("Animation_11ppj"),
"fade_to_normal": SubResource("Animation_h1geo"),
"fade_to_normal2": SubResource("Animation_hpq8f"),
"fade_to_normal3": SubResource("Animation_unb1w")
}

[sub_resource type="LabelSettings" id="LabelSettings_lywxl"]
font = ExtResource("2_ftmw7")

[node name="InstructionScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_hyd6e")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 240.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="LabelFirst" type="Node2D" parent="."]

[node name="Label" type="Label" parent="LabelFirst"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 108.0
offset_top = 8.0
offset_right = 148.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
text = "Hi!"
label_settings = SubResource("LabelSettings_htdsn")

[node name="LabelSecond" type="Node2D" parent="."]
position = Vector2(13, -3)

[node name="Label2" type="Label" parent="LabelSecond"]
texture_filter = 1
offset_left = 57.0
offset_top = 44.0
offset_right = 162.0
offset_bottom = 67.0
text = "The robot uses "
label_settings = SubResource("LabelSettings_42dcr")

[node name="Sprite2D" type="Sprite2D" parent="LabelSecond"]
texture_filter = 1
position = Vector2(61, 69)
texture = ExtResource("3_lcx0e")
centered = false

[node name="Label3" type="Label" parent="LabelSecond"]
texture_filter = 1
offset_left = 92.0
offset_top = 73.0
offset_right = 120.0
offset_bottom = 96.0
text = "and"
label_settings = SubResource("LabelSettings_42dcr")

[node name="Sprite2D2" type="Sprite2D" parent="LabelSecond"]
texture_filter = 1
position = Vector2(123, 67)
texture = ExtResource("4_af0v8")
centered = false

[node name="Label4" type="Label" parent="LabelSecond"]
texture_filter = 1
offset_left = 142.0
offset_top = 67.0
offset_right = 170.0
offset_bottom = 90.0
text = "W"
label_settings = SubResource("LabelSettings_nf2c2")

[node name="Label5" type="Label" parent="LabelSecond"]
texture_filter = 1
offset_left = 126.0
offset_top = 83.0
offset_right = 154.0
offset_bottom = 106.0
text = "A"
label_settings = SubResource("LabelSettings_nf2c2")

[node name="Label6" type="Label" parent="LabelSecond"]
texture_filter = 1
offset_left = 144.0
offset_top = 83.0
offset_right = 172.0
offset_bottom = 106.0
text = "S"
label_settings = SubResource("LabelSettings_nf2c2")

[node name="Label7" type="Label" parent="LabelSecond"]
texture_filter = 1
offset_left = 159.0
offset_top = 83.0
offset_right = 187.0
offset_bottom = 106.0
text = "D"
label_settings = SubResource("LabelSettings_nf2c2")

[node name="Label8" type="Label" parent="LabelSecond"]
texture_filter = 1
offset_left = 47.0
offset_top = 101.0
offset_right = 170.0
offset_bottom = 124.0
text = "for all his recipies!"
label_settings = SubResource("LabelSettings_42dcr")

[node name="LabelThird" type="Node2D" parent="."]

[node name="Label" type="Label" parent="LabelThird"]
texture_filter = 1
offset_left = 98.0
offset_top = 127.0
offset_right = 146.0
offset_bottom = 150.0
text = "Enjoy :)"
label_settings = SubResource("LabelSettings_8jygy")

[node name="FadeFirst" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 240.0
offset_bottom = 32.0
color = Color(0, 0, 0, 1)

[node name="FadeSecond" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 35.0
offset_right = 239.0
offset_bottom = 122.0
color = Color(0, 0, 0, 1)

[node name="FadeThird" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 122.0
offset_right = 240.0
offset_bottom = 154.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayerFirst" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k5bt6")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Label" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 3.0
offset_top = 145.0
offset_right = 131.0
offset_bottom = 168.0
text = "Press \"LMB\" to skip"
label_settings = SubResource("LabelSettings_lywxl")

[connection signal="animation_finished" from="AnimationPlayerFirst" to="." method="_on_animation_player_first_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
